<resources>
    <string name="app_name">Pet Homepage</string>
    <string name="text_title">Pet Manager</string>
    <string name="text_add">Add</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_1">1</string>
    <string name="text_add_content">Add pet</string>
    <string name="text_edit_content">Update pet</string>
    <string name="text_name">Name:</string>
    <string name="text_weight">Weight:</string>
    <string name="text_price">Price:</string>
    <string name="text_description">Description:</string>
    <string name="text_choose">Choose</string>
    <string name="text_date">date</string>
</resources>
