<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_180"
    android:layout_margin="@dimen/dp_4"
    android:background="@color/colorItemBackground">

    <TextView
        android:id="@+id/textPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/text_1"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/colorItemText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/text_name"
        android:textColor="@color/colorItemText"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPosition"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:text="@string/text_weight"
        android:textColor="@color/colorItemText"
        app:layout_constraintStart_toEndOf="@+id/textPosition"
        app:layout_constraintTop_toTopOf="@+id/textDescription" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:text="@string/text_price"
        android:textColor="@color/colorItemText"
        app:layout_constraintBottom_toBottomOf="@+id/textDescription"
        app:layout_constraintStart_toEndOf="@+id/textPosition" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/text_description"
        android:textColor="@color/colorItemText"
        app:layout_constraintBottom_toTopOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textWeight"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/text_date"
        android:textColor="@color/colorItemText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>
